--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ pymongo>=4.6.1
 aiohttp>=3.9.1
 web3>=6.11.3  # For future multi-chain support
 base58>=2.1.1  # For Solana address validation
+solders>=0.19.0  # For Solana pubkey and other utilities
